@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 10-09-2006 fixed: system information used 390k memory all the time (even when not on screen).
  - 10-09-2006 updated: Dutch language file (Thnx to MrNice)
  - 10-09-2006 updated: Polish language file (Thnx to smuto)
  - 10-09-2006 updated: Italian language file (Thnx to kotix)
